# desafiobackend-python

./: .dockerignore  .gitignore  .template.env  Dockerfile  Makefile  README.md  docker-compose.yml  logging.conf  main.py  pyproject.toml  scripts.py  test.py
alembic/: env.py
alembic/versions/: 5ed406ab9826_add_revendedor_and_compra_tables.py  8f05393b636b_create_tables.py  96bca8ca3135_create_api_user_table.py  ca3a50cb6034_add_cash_back_criterios_table.py  ec2d57b33850_add_status_compra_default_to_revendedor.py
app/: schemas.py
app/controllers/: api.py  compra.py  dependencies.py  login.py  revendedor.py
app/exceptions/: cashback.py  compra.py  revendedor.py
app/infra/: security.py  settings.py
app/infra/clients/: cashback.py
app/infra/database/: base.py  session.py
app/models/: __init__.py  api_user.py  cashback.py  compra.py  revendedor.py
app/repositories/: api_user.py  cashback.py  compra.py  revendedor.py
app/repository/: compra.py  revendedor.py
app/schemas/: cashback.py  compra.py  revendedor.py
app/services/: cashback.py  compra.py  revendedor.py
tests/: conftest.py  utils.py
tests/controllers/: conftest.py  test_compra.py  test_revendedor.py
tests/controllers/cassettes/: test_get_cashback_acumulado[revendedor_in0-revendedor_out0].yaml
tests/infra/clients/: test_cashback.py
tests/infra/clients/cassettes/: test_get_cashback_acumulado.yaml  test_get_cashback_acumulado_raises_error_with_no_cpf.yaml
tests/services/: conftest.py  test_cashback.py  test_compra.py  test_revendedor.py
