[tool.poetry]
name = "desafio-boticario-backend-python"
version = "0.1.0"
description = ""
authors = ["Elvio Martinelli <emartinelli@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
